# signvios

./: .gitignore  .gitmodules  Alert.h  Alert.mm  AnalyticsManager.swift  AppDelegate.h  AppDelegate.mm  AppSimulator.command  BlockedViewController.swift  BuildVersion.swift  ButtonTableViewCell.swift  ButtonTableViewCell.xib  CGPoint+Additions.h  CGPoint+Additions.m  CGRect+BNRAdditions.h  CGRect+BNRAdditions.m  CMVideoDimensions+Additions.swift  CODEOWNERS  CONTRIBUTING.md  CallCIRViewController.swift  ChangePasswordViewController.h  ChangePasswordViewController.mm  ColorPlaceholderImage.swift  ContactExporter.swift  ContactUtilities.h  ContactUtilities.mm  Date+Relative.swift  DebugViewController.h  DebugViewController.m  DefaultPreferences.plist  DevicePermissions.swift  DismissibleiPadKeyboardViewController.h  DismissibleiPadKeyboardViewController.m  DualSlideButton.swift  DynamicProviderAgreementViewController.h  DynamicProviderAgreementViewController.m  ENSClient.swift  ENSController.swift  EmergencyInfoViewController.swift  EndpointLocationTypeViewController.swift  (+167 more)
VideophoneEngine/: .clang-tidy  .gitignore  Android.mk  CMakeLists.txt  CODEOWNERS  CONTRIBUTING.md  DhvVideophoneEngine.vcxproj  DhvVideophoneEngine.vcxproj.filters  HoldServerVideophoneEngine.vcxproj  HoldServerVideophoneEngine.vcxproj.filters  Jenkinsfile  Jenkinsfile.linux  Jenkinsfile.linux-unit-test  Makefile  MediaServerVideophoneEngine.vcxproj  MediaServerVideophoneEngine.vcxproj.filters  Rules.mk  VideophoneEngine.files  VideophoneEngine.vcxproj  VideophoneEngine.vcxproj.filters  VideophoneEngineConfig.cmake  VideophoneEngine_common.cmake  meson.build  meson_options.txt  smiConfig.h  vpe.pc
VideophoneEngine/BlockListMgr/: Android.mk  CMakeLists.txt  CstiBlockListItem.cpp  CstiBlockListItem.h  CstiBlockListManager.cpp  CstiBlockListManager.h  CstiBlockListMgrResponse.cpp  CstiBlockListMgrResponse.h  IstiBlockListManager.h  IstiBlockListManager2.h  IstiBlockListMgrResponse.h  Makefile  meson.build
VideophoneEngine/CallHistoryMgr/: Android.mk  CMakeLists.txt  CstiCallHistoryItem.cpp  CstiCallHistoryItem.h  CstiCallHistoryList.cpp  CstiCallHistoryList.h  CstiCallHistoryManager.cpp  CstiCallHistoryManager.h  CstiCallHistoryMgrResponse.cpp  CstiCallHistoryMgrResponse.h  IstiCallHistoryManager.h  IstiCallHistoryMgrResponse.h  Makefile  meson.build
VideophoneEngine/ConfMgr/: Android.mk  CMakeLists.txt  CORP_CA.cer.pem  CstiCall.cpp  CstiCall.h  CstiCallInfo.cpp  CstiCallInfo.h  CstiCallStorage.cpp  CstiCallStorage.h  CstiConferenceManager.cpp  CstiConferenceManager.h  CstiProtocolCall.cpp  CstiProtocolCall.h  CstiProtocolManager.cpp  CstiProtocolManager.h  CstiRoutingAddress.cpp  CstiRoutingAddress.h  CstiServerInfo.h  CstiSipCall.cpp  CstiSipCall.h  CstiSipCallLeg.cpp  CstiSipCallLeg.h  CstiSipManager.cpp  CstiSipManager.h  CstiSipRegistration.cpp  CstiSipRegistration.h  CstiSipResolver.cpp  CstiSipResolver.h  CstiTunnelManager.cpp  CstiTunnelManager.h  DhvClient.cpp  DhvClient.h  ICallInfo.h  IVRCLCall.h  IstiCall.h  IstiTunnelManager.h  Makefile  RadvisionLogging.h  cacert.pem  client.pem  (+9 more)
VideophoneEngine/Distribution/: Makefile
VideophoneEngine/Documentation/: Doxyfile  MainPage.dox  Makefile  VideophoneEngine.vsd
VideophoneEngine/EndpointMonitor/: Android.mk  CMakeLists.txt  EndpointMonitor.cpp  EndpointMonitor.h  Makefile
VideophoneEngine/FileDownload/: CMakeLists.txt  CstiFileDownloadHandler.cpp  CstiFileDownloadHandler.h  IstiFileDownloadHandler.h  Makefile  meson.build
VideophoneEngine/FileUpload/: CMakeLists.txt  CstiFileUploadHandler.cpp  CstiFileUploadHandler.h  IstiFileUploadHandler.h  Makefile  meson.build
VideophoneEngine/ImageMgr/: Android.mk  CMakeLists.txt  CstiImageDownloadService.cpp  CstiImageDownloadService.h  CstiImageManager.cpp  CstiImageManager.h  CstiNvmImageCache.cpp  CstiNvmImageCache.h  IstiImageManager.h  Makefile  meson.build
VideophoneEngine/MsgMgr/: Android.mk  CMakeLists.txt  CstiMessageInfo.cpp  CstiMessageInfo.h  CstiMessageManager.cpp  CstiMessageManager.h  IstiMessageManager.h  Makefile  meson.build
VideophoneEngine/Platform/: Android.mk  AudioControl.h  CMakeLists.txt  IstiAudibleRinger.h  IstiAudioInput.h  IstiAudioOutput.h  IstiBluetooth.h  IstiHelios.h  IstiLightRing.h  IstiLogging.h  IstiMessageViewer.h  IstiNetwork.h  IstiPlatform.h  IstiStatusLED.h  IstiUserInput.h  IstiVideoInput.h  IstiVideoOutput.h  IstiVideoPlaybackFrame.h  Makefile  VideoControl.h  VideoFrame.h  meson.build
VideophoneEngine/RegistrationMgr/: Android.mk  CMakeLists.txt  CstiRegistrationList.cpp  CstiRegistrationList.h  CstiRegistrationListItem.cpp  CstiRegistrationListItem.h  CstiRegistrationManager.cpp  CstiRegistrationManager.h  Makefile  meson.build
VideophoneEngine/RingGroupMgr/: Android.mk  CMakeLists.txt  CstiRingGroupManager.cpp  CstiRingGroupManager.h  CstiRingGroupMgrResponse.cpp  CstiRingGroupMgrResponse.h  IstiRingGroupManager.h  IstiRingGroupMgrResponse.h  Makefile  meson.build
VideophoneEngine/Serialization/: Android.mk  CMakeLists.txt  ISerializable.h  ISerializer.h  JsonFileSerializer.cpp  JsonFileSerializer.h  JsonSerializer.h  Makefile  SerializedProperty.h
VideophoneEngine/Tests/: Android.mk  CMakeLists.txt  Coverage.sh  CstiIpAddressTest.cpp  CstiListTest.cpp  CstiListTest.h  IstiVideophoneEngineTest.cpp  Makefile  PassThrough.txt  PropertyManagerReadTest.cpp  PropertyManagerTest.cpp  SignalTest.cpp  SignalTest.h  StringsTest.cpp  StringsTest.h  Test.cpp  Test.h  TestPropertyTable.xml  TestVP.cpp  TestVP.sln  TestVP.vcproj  Vera.sh  WindowsTests.sln  meson.build  nuget.config  stdafx.cpp  stdafx.h  stiToolsTest.cpp
VideophoneEngine/UserAccountMgr/: Android.mk  CMakeLists.txt  IUserAccountManager.h  Makefile  UserAccountListItem.cpp  UserAccountListItem.h  UserAccountManager.cpp  UserAccountManager.h
VideophoneEngine/cci/: Android.mk  AstiVideophoneEngine.cpp  AstiVideophoneEngine.h  CMakeLists.txt  CstiCCI.cpp  CstiCCI.h  IstiVideophoneEngine.h  Makefile  meson.build
VideophoneEngine/common/: AgentHistoryItem.h  Android.mk  CFifo.h  CstiEvent.cpp  (+80 more)
(+1917 files in other folders)
