
vpe_libs += static_library('stiCommon',
  'CstiOsTask.cpp',
  'CstiOsTaskMQ.cpp',
  'CstiExtendedEvent.cpp',
  'CstiTask.cpp',
  'CstiUniversalEvent.cpp',
  'CstiHostNameResolver.cpp',
  'cmPropertyNameDef.cpp',
  'stiAssert.cpp',
  'CstiEvent.cpp',
  'stiDebugTools.cpp',
  'stiError.cpp',
  'stiSysUtilizationInfo.cpp',
  'stiTools.cpp',
  'stiTrace.cpp',
  'stiUdpTrace.cpp',
  'stiGUID.cpp',
  'ccrc.cpp',
  'CstiItemId.cpp',
  'CstiProfiler.cpp',
  'stiBase64.cpp',
  'CstiIpAddress.cpp',
  'stiRemoteLogEvent.cpp',
  'stiMessages.cpp',
  'CstiPhoneNumberValidator.cpp',
  'CstiRegEx.cpp',
  'CstiEventQueue.cpp',
  'CstiWatchDog.cpp',
  'CstiTimer.cpp',
  'CstiEventTimer.cpp',
  'CstiString.cpp',
  include_directories : [vpe_includes],
  dependencies : [ixml_dep, vpebuildinfo_dep],
  cpp_args : ['-fno-strict-aliasing'],
)
