
vpe_libs += static_library('MPEG4',
  'MP4Movie.cpp',
  'MP4Track.cpp',
  'MP4Media.cpp',
  'MP4Common.cpp',
  'MP4Parser.cpp',
  'MP4Optimize.cpp',
  'MP4Signals.cpp',
  'CVMCircularBuffer.cpp',
  'CFileDataHandler.cpp',
  'CServerDataHandler.cpp',
  'CDataTransferHandler.cpp',
  include_directories : [vpe_includes],
)

subdir('Atoms')
subdir('Toolbox')
